# fastapi-mariadb-sqlalchemy

./: pyproject.toml
