[tool.poetry]
name = "fastapi-mariadb-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["fabianbernhart <fabian_bernhart@web.de>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.2"
fastapi = "^0.110.0"
pydantic-settings = "2.2.1"
pymysql = "^1.1.1"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "src.main:start"